Apply error-prone patch